firewiki: - ensured all slugs are saved as lower case - made links bolder (not visible really) - added wiki 'new' command post event to save new wikis - amended breadcrumb nav to not add new link if it already exists

--- a/fire-wiki-io/apps/www/css/landing-test-1.css
+++ b/fire-wiki-io/apps/www/css/landing-test-1.css
@@ -214,6 +214,9 @@ section.article p {
     line-height: 1.2em;
 }
 
+section.article a {
+    font-weight: bold;
+}
 
 section.article a.action:link, section.article a.action:visited, section.article a.action:active
 {
